--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -14,19 +14,17 @@
       "All in one"
     ],
     "song_2937d1e0634a": [
-      "All in one",
-      "Feel good tamil songs",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_b1eed02e084e": [
       "Feel good tamil songs",
       "Tamilsongs best of all time"
     ],
     "song_afd87a393b33": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_1600ddfc5d9c": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_f904bcb561f8": [
       "Soothing"
@@ -43,7 +41,7 @@
       "Soothing"
     ],
     "song_3cd1ee8dc7bd": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_87179519bee4": [
       "Soothing"
@@ -101,7 +99,7 @@
       "Soothing"
     ],
     "song_376a775df7fb": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_72d81830b452": [
       "Soothing"
@@ -135,7 +133,7 @@
       "All in one"
     ],
     "song_f07dca0d5c49": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_f426c32df4f1": [
       "Soothing"
@@ -148,7 +146,7 @@
       "All in one"
     ],
     "song_2f73f7c44889": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_4740952729fc": [
       "All in one",
@@ -197,19 +195,16 @@
       "All in one"
     ],
     "song_f8d9b912fd7d": [
-      "All in one",
-      "Tamil best love feeling songs",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_ee38e253e01a": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_3eac628e59ee": [
       "Soothing"
     ],
     "song_3b04acd03b57": [
-      "All in one",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_8895646af3c4": [
       "Soothing"
@@ -224,7 +219,7 @@
       "Soothing"
     ],
     "song_74c241a27017": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_19442aca0a8a": [
       "All in one"
@@ -257,7 +252,7 @@
       "All in one"
     ],
     "song_5aeb6362db43": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_3b6081745b96": [
       "Soothing"
@@ -275,11 +270,10 @@
       "Love songs filtered by key"
     ],
     "song_bc322025efec": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_073b9e1d43b6": [
-      "All in one",
-      "Tamil best love feeling songs"
+      "Depression pain tamil songs"
     ],
     "song_180ea4e26fe3": [
       "All in one"
@@ -316,7 +310,7 @@
       "All in one"
     ],
     "song_a9e2560892f7": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_b5488e2657e9": [
       "Soothing"
@@ -421,7 +415,7 @@
       "All in one"
     ],
     "song_299397715805": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_13fbdfe7c91a": [
       "All in one",
@@ -446,7 +440,7 @@
       "All in one"
     ],
     "song_f5c22ee0b9cf": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_ba71129b77be": [
       "All in one"
@@ -516,7 +510,7 @@
       "All in one"
     ],
     "song_070d2939cb16": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_3f7a7b6d600f": [
       "All in one"
@@ -555,20 +549,19 @@
       "Soothing"
     ],
     "song_6bc690a2b1b4": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_d4cfe0d4e257": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_69cd1858ada6": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_2a313737c158": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_639f9f9ab37d": [
-      "All in one",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_2ba3e9809030": [
       "Love songs filtered by key"
@@ -577,15 +570,13 @@
       "All in one"
     ],
     "song_638c79eaae35": [
-      "All in one",
-      "Feel good tamil songs",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_239babaa5d6a": [
       "Love songs filtered by key"
     ],
     "song_5ba998f116cb": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_ba19f7dba410": [
       "Love songs filtered by key"
@@ -700,7 +691,7 @@
       "All in one"
     ],
     "song_dad87be7aa76": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_c7204620142d": [
       "All in one"
@@ -830,7 +821,7 @@
       "All in one"
     ],
     "song_3d7e6fc8b184": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_7449b00aeeaf": [
       "Soothing"
@@ -842,8 +833,7 @@
       "All in one"
     ],
     "song_6f1121951f87": [
-      "Heal",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_1c75f735ffcb": [
       "All in one"
@@ -873,7 +863,7 @@
       "Soothing"
     ],
     "song_cdc1fd4e7bb5": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_991885d0b5ae": [
       "Soothing"
@@ -1000,7 +990,7 @@
       "Tamilsongs best of all time"
     ],
     "song_72fbdff8214d": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_cc553c20855c": [
       "All in one"
@@ -1104,7 +1094,7 @@
       "Soothing"
     ],
     "song_a9f0c5efde54": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_87e4a00d6cbe": [
       "Love songs filtered by key"
@@ -1220,7 +1210,7 @@
       "All in one"
     ],
     "song_ea28ae2e1bee": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_5e65df2c7965": [
       "Soothing"
@@ -1300,8 +1290,7 @@
       "All in one"
     ],
     "song_b4189b5c0eed": [
-      "All in one",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_b2fde2b9d53a": [
       "Love songs filtered by key"
@@ -1313,11 +1302,10 @@
       "All in one"
     ],
     "song_00090eaf0a41": [
-      "All in one",
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_4e4a157fec79": [
-      "All in one"
+      "Depression pain tamil songs"
     ],
     "song_6a6eaa996d00": [
       "Soothing"
@@ -1332,7 +1320,7 @@
       "All in one"
     ],
     "song_c9f8d01e1cc6": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_4ec6cd309f96": [
       "All in one"
@@ -1399,7 +1387,7 @@
       "Feel good tamil songs"
     ],
     "song_77d0e9d18461": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_a774d170b279": [
       "Love songs filtered by key"
@@ -1524,7 +1512,7 @@
       "Love songs filtered by key"
     ],
     "song_853a4e9e36c1": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_8cf64db006b2": [
       "Soothing"
@@ -1533,7 +1521,7 @@
       "Soothing"
     ],
     "song_dab02fd9cffa": [
-      "Heal"
+      "Depression pain tamil songs"
     ],
     "song_33c417fd0cd6": [
       "Soothing"
@@ -1551,8 +1539,7 @@
       "Soothing"
     ],
     "song_79f6f17492da": [
-      "Heal",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_946020354236": [
       "Love songs filtered by key"
@@ -2572,14 +2559,13 @@
       "Hindi songs best of 2000-2025"
     ],
     "song_7314ada600d4": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_254990dd71c1": [
-      "Tamil best love feeling songs",
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_ea12e4bee9a3": [
-      "Tamil best love feeling songs"
+      "Depression pain tamil songs"
     ],
     "song_06a17965811a": [
       "Tamil best love feeling songs"
@@ -2588,7 +2574,7 @@
       "Soothing"
     ],
     "song_9045151fd344": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_c42b7fe787ef": [
       "Love songs filtered by key"
@@ -2659,7 +2645,7 @@
       "Tamilsongs best of all time"
     ],
     "song_2371a023ffd8": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_2fbfb33a5ab3": [
       "Tamilsongs best of all time"
@@ -2672,19 +2658,19 @@
       "Tamil best love feeling songs"
     ],
     "song_74c922cf261d": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_e8b4a3f3f3af": [
       "Soothing"
     ],
     "song_55b7133b908e": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_1f31a704a147": [
       "Soothing"
     ],
     "song_dd24a77cd30e": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_4fe6435d95ad": [
       "Soothing"
@@ -2714,10 +2700,10 @@
       "Soothing"
     ],
     "song_b768fd419fbd": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_4672addb499f": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_ec652b1dad63": [
       "Tamil love melody songs"
@@ -2729,10 +2715,10 @@
       "Tamil love melody songs"
     ],
     "song_c5db7e3663e0": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_03bc2008b3a6": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_d1d9cebd3926": [
       "Tamil love melody songs"
@@ -2747,8 +2733,7 @@
       "Soothing"
     ],
     "song_cef232a492bc": [
-      "Tamil love melody songs",
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_3b4c0248e660": [
       "Tamil love melody songs"
@@ -2787,7 +2772,7 @@
       "Tamil love melody songs"
     ],
     "song_0d8de6265150": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_8e40debc3474": [
       "Love songs filtered by key"
@@ -2796,7 +2781,7 @@
       "Love songs filtered by key"
     ],
     "song_214b7883152a": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_66a562b67dc4": [
       "Love songs filtered by key"
@@ -2820,7 +2805,7 @@
       "Soothing"
     ],
     "song_741bbeecaf35": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_8d7293ddf3f0": [
       "Soothing"
@@ -2835,7 +2820,7 @@
       "Tamil love melody songs"
     ],
     "song_525844a70351": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_efb8dabc353a": [
       "Tamil love melody songs"
@@ -2850,7 +2835,7 @@
       "Love songs filtered by key"
     ],
     "song_9ffc0f4c206c": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_3abda1eb303d": [
       "Tamil love melody songs"
@@ -2912,7 +2897,7 @@
       "Tamil love melody songs"
     ],
     "song_1fdc9db42809": [
-      "Tamil love melody songs"
+      "Depression pain tamil songs"
     ],
     "song_cd515f6344e2": [
       "Tamil love melody songs"
@@ -2954,7 +2939,7 @@
       "Tamil love melody songs"
     ],
     "song_c79ff7153480": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_615bbcf81b60": [
       "Tamil love melody songs"
@@ -2963,7 +2948,7 @@
       "Tamilsongs best of all time"
     ],
     "song_a7ae54593dba": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_78814349d9fb": [
       "Tamilsongs best of all time"
@@ -3080,7 +3065,7 @@
       "Tamilsongs best of all time"
     ],
     "song_35a709da004e": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_b32416ead450": [
       "Tamilsongs best of all time"
@@ -3089,7 +3074,7 @@
       "Tamilsongs best of all time"
     ],
     "song_43920aecd641": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_ca81ea63f8fc": [
       "Love songs filtered by key"
@@ -3104,7 +3089,7 @@
       "Tamilsongs best of all time"
     ],
     "song_299ffea3b797": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_b9cd21d8f320": [
       "Tamilsongs best of all time"
@@ -3215,7 +3200,7 @@
       "Tamilsongs best of all time"
     ],
     "song_b1b2c5f0afe9": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_a62d16233edc": [
       "Tamilsongs best of all time"
@@ -3479,7 +3464,7 @@
       "Tamilsongs best of all time"
     ],
     "song_2e86823c2085": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_9c1a29c7a2c0": [
       "Tamilsongs best of all time"
@@ -3566,7 +3551,7 @@
       "Love songs filtered by key"
     ],
     "song_aca14268f933": [
-      "Tamilsongs best of all time"
+      "Depression pain tamil songs"
     ],
     "song_c15553e3368f": [
       "Tamilsongs best of all time"
@@ -3578,7 +3563,7 @@
       "Tamilsongs best of all time"
     ],
     "song_70d93680e3f0": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_d957a8432aaa": [
       "Tamilsongs best of all time"
@@ -4313,7 +4298,7 @@
       "Love songs filtered by key"
     ],
     "song_d37449f62166": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_43360091c365": [
       "Love songs filtered by key"
@@ -4421,7 +4406,7 @@
       "Love songs filtered by key"
     ],
     "song_4176e7df2eb0": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_bb8352ab468a": [
       "Love songs filtered by key"
@@ -4439,7 +4424,7 @@
       "Love songs filtered by key"
     ],
     "song_37f66ce76f8c": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_8c3fc2cbc452": [
       "Love songs filtered by key"
@@ -4514,7 +4499,7 @@
       "Love songs filtered by key"
     ],
     "song_4d134477f24e": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_d3cb6acec9f8": [
       "Love songs filtered by key"
@@ -4634,7 +4619,7 @@
       "Love songs filtered by key"
     ],
     "song_b7da826e66e4": [
-      "Love songs filtered by key"
+      "Depression pain tamil songs"
     ],
     "song_88d04d88e9be": [
       "Love songs filtered by key"
@@ -4745,7 +4730,7 @@
       "Soothing"
     ],
     "song_82a85dcb9748": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_7390cfc79402": [
       "Soothing"
@@ -4829,7 +4814,7 @@
       "Soothing"
     ],
     "song_fe2f9ff41f90": [
-      "Soothing"
+      "Depression pain tamil songs"
     ],
     "song_7a994a5f1c47": [
       "Soothing"
@@ -4887,18 +4872,120 @@
     ],
     "song_460cf62e2b3c": [
       "Soothing"
+    ],
+    "song_90f2d78d4c73": [
+      "Depression pain tamil songs"
+    ],
+    "song_3a5d593c8525": [
+      "Depression pain tamil songs"
+    ],
+    "song_330579aefb2d": [
+      "Depression pain tamil songs"
+    ],
+    "song_91fa4d3eae51": [
+      "Depression pain tamil songs"
+    ],
+    "song_e7b86a905e3d": [
+      "Depression pain tamil songs"
+    ],
+    "song_961643d5b346": [
+      "Depression pain tamil songs"
+    ],
+    "song_cf6f34c8cade": [
+      "Depression pain tamil songs"
+    ],
+    "song_b030f0691d78": [
+      "Depression pain tamil songs"
+    ],
+    "song_1846f732d02f": [
+      "Depression pain tamil songs"
+    ],
+    "song_747166b5d291": [
+      "Depression pain tamil songs"
+    ],
+    "song_99241b93b562": [
+      "Depression pain tamil songs"
+    ],
+    "song_a3baf387e9b5": [
+      "Depression pain tamil songs"
+    ],
+    "song_8797678e22d3": [
+      "Depression pain tamil songs"
+    ],
+    "song_2afef420263d": [
+      "Depression pain tamil songs"
+    ],
+    "song_310e1f9433c0": [
+      "Depression pain tamil songs"
+    ],
+    "song_6c6de272a056": [
+      "Depression pain tamil songs"
+    ],
+    "song_3411fa5f0cb8": [
+      "Depression pain tamil songs"
+    ],
+    "song_dfeac07c36fd": [
+      "Depression pain tamil songs"
+    ],
+    "song_ed5732fbf8f5": [
+      "Depression pain tamil songs"
+    ],
+    "song_c6cfe8a7f8dc": [
+      "Depression pain tamil songs"
+    ],
+    "song_77f8f8a4f522": [
+      "Depression pain tamil songs"
+    ],
+    "song_cfbc52ae7fc7": [
+      "Depression pain tamil songs"
+    ],
+    "song_773207ac32bb": [
+      "Depression pain tamil songs"
+    ],
+    "song_ce220980e030": [
+      "Depression pain tamil songs"
+    ],
+    "song_2a2ff3095f19": [
+      "Depression pain tamil songs"
+    ],
+    "song_227d6825d80e": [
+      "Depression pain tamil songs"
+    ],
+    "song_32403c966c7a": [
+      "Depression pain tamil songs"
+    ],
+    "song_ab68c50fed97": [
+      "Depression pain tamil songs"
+    ],
+    "song_762adbcab981": [
+      "Depression pain tamil songs"
+    ],
+    "song_2b4ec6d79b40": [
+      "Depression pain tamil songs"
+    ],
+    "song_09210f186e91": [
+      "Depression pain tamil songs"
+    ],
+    "song_48376ea514fb": [
+      "Depression pain tamil songs"
+    ],
+    "song_d75acc1029ce": [
+      "Depression pain tamil songs"
+    ],
+    "song_706a7505e13a": [
+      "Depression pain tamil songs"
     ]
   },
   "stats": {
-    "total_mappings": 1606,
-    "generated_at": "2025-07-31T09:26:52.438581",
+    "total_mappings": 1640,
+    "generated_at": "2025-08-01T15:28:21.378438",
     "last_session_stats": {
-      "new_songs_added": 67,
+      "new_songs_added": 34,
       "new_playlists_added": 1,
-      "duplicates_skipped": 215,
+      "duplicates_skipped": 75,
       "playlists_updated": 0,
-      "existing_songs_found": 1539,
-      "songs_added_to_existing_playlists": 208
+      "existing_songs_found": 1606,
+      "songs_added_to_existing_playlists": 75
     }
   }
 }
