--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -1520,7 +1520,7 @@
       "Soothing"
     ],
     "song_db265dca2a3d": [
-      "Soothing"
+      "Latest hits tamil"
     ],
     "song_904bf1165439": [
       "Love songs filtered by key"
@@ -5972,18 +5972,240 @@
     ],
     "song_33c174323f32": [
       "Old songs"
+    ],
+    "song_843fc2758c8d": [
+      "Latest hits tamil"
+    ],
+    "song_4a9e0003db01": [
+      "Latest hits tamil"
+    ],
+    "song_6789994104cf": [
+      "Latest hits tamil"
+    ],
+    "song_494f41cd7b1f": [
+      "Latest hits tamil"
+    ],
+    "song_37e32a4327f3": [
+      "Latest hits tamil"
+    ],
+    "song_18347a06140f": [
+      "Latest hits tamil"
+    ],
+    "song_c5c134cadb0d": [
+      "Latest hits tamil"
+    ],
+    "song_e7baab72ad4b": [
+      "Latest hits tamil"
+    ],
+    "song_7bfa067fafba": [
+      "Latest hits tamil"
+    ],
+    "song_f4e71c6fb136": [
+      "Latest hits tamil"
+    ],
+    "song_9b306a4f7315": [
+      "Latest hits tamil"
+    ],
+    "song_8029ef58cdb9": [
+      "Latest hits tamil"
+    ],
+    "song_59403bd36ecd": [
+      "Latest hits tamil"
+    ],
+    "song_024bab76ed59": [
+      "Latest hits tamil"
+    ],
+    "song_a5513513b274": [
+      "Latest hits tamil"
+    ],
+    "song_6e39d1390f0e": [
+      "Latest hits tamil"
+    ],
+    "song_3f7dea782f3b": [
+      "Latest hits tamil"
+    ],
+    "song_0d7248dbb972": [
+      "Latest hits tamil"
+    ],
+    "song_4cded06ffcb4": [
+      "Latest hits tamil"
+    ],
+    "song_1b12320819a7": [
+      "Latest hits tamil"
+    ],
+    "song_a334aeaa1d10": [
+      "Latest hits tamil"
+    ],
+    "song_70f836eacd2e": [
+      "Latest hits tamil"
+    ],
+    "song_8fd3fad08c88": [
+      "Latest hits tamil"
+    ],
+    "song_0498a7a751eb": [
+      "Latest hits tamil"
+    ],
+    "song_c96223c8272a": [
+      "Latest hits tamil"
+    ],
+    "song_08444ede5a54": [
+      "Latest hits tamil"
+    ],
+    "song_3feec8034ea5": [
+      "Latest hits tamil"
+    ],
+    "song_97e7b5506e2e": [
+      "Latest hits tamil"
+    ],
+    "song_dafb7d8155de": [
+      "Latest hits tamil"
+    ],
+    "song_45d625ed2699": [
+      "Latest hits tamil"
+    ],
+    "song_417719f33489": [
+      "Latest hits tamil"
+    ],
+    "song_248f439bdfd3": [
+      "Latest hits tamil"
+    ],
+    "song_50401698e393": [
+      "Latest hits tamil"
+    ],
+    "song_a082d4b37846": [
+      "Latest hits tamil"
+    ],
+    "song_ec01fbb033ef": [
+      "Latest hits tamil"
+    ],
+    "song_48c4e502acac": [
+      "Latest hits tamil"
+    ],
+    "song_ca15ff8be039": [
+      "Latest hits tamil"
+    ],
+    "song_1226d007398c": [
+      "Latest hits tamil"
+    ],
+    "song_3b040e5c0839": [
+      "Latest hits tamil"
+    ],
+    "song_7b5c617b9844": [
+      "Latest hits tamil"
+    ],
+    "song_280e1be951bb": [
+      "Latest hits tamil"
+    ],
+    "song_079e2038eac8": [
+      "Latest hits tamil"
+    ],
+    "song_0b6f75d45294": [
+      "Latest hits tamil"
+    ],
+    "song_8777f0bf4747": [
+      "Latest hits tamil"
+    ],
+    "song_30e6254d2d53": [
+      "Latest hits tamil"
+    ],
+    "song_161d98826b3c": [
+      "Latest hits tamil"
+    ],
+    "song_ce9618bf2814": [
+      "Latest hits tamil"
+    ],
+    "song_6c26b89531c9": [
+      "Latest hits tamil"
+    ],
+    "song_65145278d9a5": [
+      "Latest hits tamil"
+    ],
+    "song_068fceb66be5": [
+      "Latest hits tamil"
+    ],
+    "song_5cdda64644c2": [
+      "Latest hits tamil"
+    ],
+    "song_3baac280b54a": [
+      "Latest hits tamil"
+    ],
+    "song_42084eb9737e": [
+      "Latest hits tamil"
+    ],
+    "song_dbc4be3311aa": [
+      "Latest hits tamil"
+    ],
+    "song_4832ab714985": [
+      "Latest hits tamil"
+    ],
+    "song_a6390be87d9b": [
+      "Latest hits tamil"
+    ],
+    "song_1ee1e1960eea": [
+      "Latest hits tamil"
+    ],
+    "song_fca5811f5993": [
+      "Latest hits tamil"
+    ],
+    "song_a7414bc6f3d6": [
+      "Latest hits tamil"
+    ],
+    "song_2b7f7b1ed4d7": [
+      "Latest hits tamil"
+    ],
+    "song_6e36429e10b0": [
+      "Latest hits tamil"
+    ],
+    "song_fa4040c5f6b6": [
+      "Latest hits tamil"
+    ],
+    "song_54f185850ff6": [
+      "Latest hits tamil"
+    ],
+    "song_42e4f79a473e": [
+      "Latest hits tamil"
+    ],
+    "song_f69dc792060a": [
+      "Latest hits tamil"
+    ],
+    "song_5251c350ca05": [
+      "Latest hits tamil"
+    ],
+    "song_8f0f0965a2b8": [
+      "Latest hits tamil"
+    ],
+    "song_b0d80310077c": [
+      "Latest hits tamil"
+    ],
+    "song_e18e8de3c265": [
+      "Latest hits tamil"
+    ],
+    "song_62da92f0156e": [
+      "Latest hits tamil"
+    ],
+    "song_a22116738818": [
+      "Latest hits tamil"
+    ],
+    "song_b3fe82dcee06": [
+      "Latest hits tamil"
+    ],
+    "song_b4ea389ba213": [
+      "Latest hits tamil"
+    ],
+    "song_749a1bcb183e": [
+      "Latest hits tamil"
     ]
   },
   "stats": {
-    "total_mappings": 1975,
-    "generated_at": "2025-08-05T11:27:25.151953",
+    "total_mappings": 2049,
+    "generated_at": "2025-08-05T14:13:07.525542",
     "last_session_stats": {
-      "new_songs_added": 335,
+      "new_songs_added": 74,
       "new_playlists_added": 1,
-      "duplicates_skipped": 121,
+      "duplicates_skipped": 1,
       "playlists_updated": 0,
-      "existing_songs_found": 1640,
-      "songs_added_to_existing_playlists": 120
+      "existing_songs_found": 1975,
+      "songs_added_to_existing_playlists": 1
     }
   }
 }
