new playlist added

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -852,7 +852,7 @@
       "Tamil love melody songs"
     ],
     "song_0379b1a56446": [
-      "Love songs filtered by key"
+      "Trending now tamil"
     ],
     "song_54ba3661c057": [
       "All in one"
@@ -1115,7 +1115,7 @@
       "All in one"
     ],
     "song_5f0b8b294e0a": [
-      "Love songs filtered by key"
+      "Trending now tamil"
     ],
     "song_d66747d30120": [
       "Soothing"
@@ -1429,8 +1429,7 @@
       "Feel good tamil songs"
     ],
     "song_966faa9a3865": [
-      "Feel good tamil songs",
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_39cdeaa13357": [
       "Feel good tamil songs"
@@ -1446,7 +1445,7 @@
       "Feel good tamil songs"
     ],
     "song_c0e3b72c4c91": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_d3cd670bfd72": [
       "Feel good tamil songs"
@@ -1455,8 +1454,7 @@
       "Love songs filtered by key"
     ],
     "song_810e9c65b80b": [
-      "Feel good tamil songs",
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_c6ef136dd036": [
       "Feel good tamil songs"
@@ -1520,7 +1518,7 @@
       "Soothing"
     ],
     "song_db265dca2a3d": [
-      "Latest hits tamil"
+      "Trending now tamil"
     ],
     "song_904bf1165439": [
       "Love songs filtered by key"
@@ -4153,7 +4151,7 @@
       "Tamilsongs best of all time"
     ],
     "song_e30f77091cf5": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_d30c8c56c2eb": [
       "Soothing"
@@ -4162,25 +4160,25 @@
       "Top hits"
     ],
     "song_cc7db8af7031": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_01bd550e0cad": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_23b1e2d26426": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_9acf3e6f1dfe": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_eeca48417072": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_e9d041db240b": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_e5acc5689c49": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_c88ac2fa03c6": [
       "Top hits"
@@ -4189,31 +4187,31 @@
       "Top hits"
     ],
     "song_d1469d887b3b": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_157a69d60275": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_3a14989c83df": [
       "Top hits"
     ],
     "song_5c361c51586c": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_f8264a4082bf": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_f9912c95b030": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_3547eeffb263": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_58ce55abac75": [
       "Top hits"
     ],
     "song_180c19a85df2": [
-      "Top hits"
+      "Trending now tamil"
     ],
     "song_df50686106e4": [
       "Top hits"
@@ -4231,7 +4229,7 @@
       "Top hits"
     ],
     "song_464d53e3bbd2": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_47496f1ffa50": [
       "Top hits"
@@ -4252,7 +4250,7 @@
       "Top hits"
     ],
     "song_c99011ccfc34": [
-      "Soothing"
+      "Trending now tamil"
     ],
     "song_81f376ed5a62": [
       "Love songs filtered by key"
@@ -5995,7 +5993,7 @@
       "Latest hits tamil"
     ],
     "song_e7baab72ad4b": [
-      "Latest hits tamil"
+      "Trending now tamil"
     ],
     "song_7bfa067fafba": [
       "Latest hits tamil"
@@ -6022,7 +6020,7 @@
       "Latest hits tamil"
     ],
     "song_3f7dea782f3b": [
-      "Latest hits tamil"
+      "Trending now tamil"
     ],
     "song_0d7248dbb972": [
       "Latest hits tamil"
@@ -6040,7 +6038,7 @@
       "Latest hits tamil"
     ],
     "song_8fd3fad08c88": [
-      "Latest hits tamil"
+      "Trending now tamil"
     ],
     "song_0498a7a751eb": [
       "Latest hits tamil"
@@ -6194,18 +6192,90 @@
     ],
     "song_749a1bcb183e": [
       "Latest hits tamil"
+    ],
+    "song_daca0cffcfda": [
+      "Trending now tamil"
+    ],
+    "song_e8d06b8ac75d": [
+      "Trending now tamil"
+    ],
+    "song_58b4dab2414b": [
+      "Trending now tamil"
+    ],
+    "song_eea2212dbb66": [
+      "Trending now tamil"
+    ],
+    "song_21ef1553e369": [
+      "Trending now tamil"
+    ],
+    "song_51ffcbac2909": [
+      "Trending now tamil"
+    ],
+    "song_8f8c8be5dab1": [
+      "Trending now tamil"
+    ],
+    "song_a8333f0c7eb9": [
+      "Trending now tamil"
+    ],
+    "song_78d500c8bab2": [
+      "Trending now tamil"
+    ],
+    "song_6cfd5414b1df": [
+      "Trending now tamil"
+    ],
+    "song_f25850eb6d6a": [
+      "Trending now tamil"
+    ],
+    "song_df9c03eacccc": [
+      "Trending now tamil"
+    ],
+    "song_1405afa6a891": [
+      "Trending now tamil"
+    ],
+    "song_9ea8fbec0216": [
+      "Trending now tamil"
+    ],
+    "song_957ec2064784": [
+      "Trending now tamil"
+    ],
+    "song_5f8db3c0fcde": [
+      "Trending now tamil"
+    ],
+    "song_b4b9dc120d5b": [
+      "Trending now tamil"
+    ],
+    "song_ed62b4e28983": [
+      "Trending now tamil"
+    ],
+    "song_9a7202d9eab1": [
+      "Trending now tamil"
+    ],
+    "song_a9bf73c4b1d8": [
+      "Trending now tamil"
+    ],
+    "song_8ab85de9f93b": [
+      "Trending now tamil"
+    ],
+    "song_cbb748339795": [
+      "Trending now tamil"
+    ],
+    "song_3106e1be8c14": [
+      "Trending now tamil"
+    ],
+    "song_5fc73534ce04": [
+      "Trending now tamil"
     ]
   },
   "stats": {
-    "total_mappings": 2049,
-    "generated_at": "2025-08-05T14:13:07.525542",
+    "total_mappings": 2073,
+    "generated_at": "2025-08-05T14:42:37.965866",
     "last_session_stats": {
-      "new_songs_added": 74,
+      "new_songs_added": 24,
       "new_playlists_added": 1,
-      "duplicates_skipped": 1,
+      "duplicates_skipped": 26,
       "playlists_updated": 0,
-      "existing_songs_found": 1975,
-      "songs_added_to_existing_playlists": 1
+      "existing_songs_found": 2049,
+      "songs_added_to_existing_playlists": 26
     }
   }
 }
