new playlist added

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -65,7 +65,7 @@
       "Old songs"
     ],
     "song_1f536bba5b5a": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_6981c94d29af": [
       "All in one",
@@ -77,7 +77,7 @@
       "Tamilsongs best of all time"
     ],
     "song_866113083449": [
-      "Old songs"
+      "Tamil songs that feel good now"
     ],
     "song_9b13d3f66f26": [
       "All in one",
@@ -87,10 +87,10 @@
       "Soothing"
     ],
     "song_1a2a1ba9e0f2": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_3b56538d08cf": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_8dee254c59c0": [
       "Love songs filtered by key"
@@ -133,7 +133,7 @@
       "All in one"
     ],
     "song_f07dca0d5c49": [
-      "Depression pain tamil songs"
+      "Tamil songs that feel good now"
     ],
     "song_f426c32df4f1": [
       "Soothing"
@@ -171,7 +171,7 @@
       "All in one"
     ],
     "song_a51bcb1fa5cd": [
-      "All in one"
+      "Tamil songs that feel good now"
     ],
     "song_3a959e83813c": [
       "All in one"
@@ -180,10 +180,10 @@
       "Soothing"
     ],
     "song_3c00ef160f8c": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_419da1bec596": [
-      "Love songs filtered by key"
+      "Tamil songs that feel good now"
     ],
     "song_315b7c0851be": [
       "Love songs filtered by key"
@@ -373,13 +373,13 @@
       "Old songs"
     ],
     "song_62e4597c3ede": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_3c9a67c5e52e": [
       "Old songs"
     ],
     "song_334dbec346aa": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_2cda26c2360c": [
       "All in one"
@@ -458,7 +458,7 @@
       "Love songs filtered by key"
     ],
     "song_73db1d3a35cc": [
-      "Love songs filtered by key"
+      "Tamil songs that feel good now"
     ],
     "song_717c9420eaa6": [
       "All in one"
@@ -622,7 +622,7 @@
       "Old songs"
     ],
     "song_77623445f5b6": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_5bb1c831da54": [
       "All in one"
@@ -668,7 +668,7 @@
       "Old songs"
     ],
     "song_de9d95d6090e": [
-      "Old songs"
+      "Tamil songs that feel good now"
     ],
     "song_1600b91b6340": [
       "Soothing"
@@ -1182,7 +1182,7 @@
       "Soothing"
     ],
     "song_a32eebc098b8": [
-      "Love songs filtered by key"
+      "Tamil songs that feel good now"
     ],
     "song_b11caa6ecd18": [
       "All in one"
@@ -1230,7 +1230,7 @@
       "Old songs"
     ],
     "song_9ed749f8fad3": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_cddf5a18b783": [
       "All in one"
@@ -1266,7 +1266,7 @@
       "Tamilsongs best of all time"
     ],
     "song_08d25ca059f8": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_b16f345dad19": [
       "Soothing"
@@ -1368,7 +1368,7 @@
       "Old songs"
     ],
     "song_ece8ca569864": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_8963542b800a": [
       "Soothing"
@@ -1470,7 +1470,7 @@
       "Feel it"
     ],
     "song_37714f5cf83c": [
-      "Old songs"
+      "Tamil songs that feel good now"
     ],
     "song_a1a540315b5b": [
       "Soothing"
@@ -1521,7 +1521,7 @@
       "Trending now tamil"
     ],
     "song_904bf1165439": [
-      "Love songs filtered by key"
+      "Tamil songs that feel good now"
     ],
     "song_3c9b41fc6c0d": [
       "Soothing"
@@ -2796,7 +2796,7 @@
       "Soothing"
     ],
     "song_741bbeecaf35": [
-      "Depression pain tamil songs"
+      "Tamil songs that feel good now"
     ],
     "song_8d7293ddf3f0": [
       "Soothing"
@@ -2808,7 +2808,7 @@
       "Tamil love melody songs"
     ],
     "song_4a3052610c15": [
-      "Tamil love melody songs"
+      "Tamil songs that feel good now"
     ],
     "song_525844a70351": [
       "Depression pain tamil songs"
@@ -2823,7 +2823,7 @@
       "Tamil love melody songs"
     ],
     "song_c980c37dde31": [
-      "Love songs filtered by key"
+      "Tamil songs that feel good now"
     ],
     "song_9ffc0f4c206c": [
       "Depression pain tamil songs"
@@ -3161,7 +3161,7 @@
       "Tamilsongs best of all time"
     ],
     "song_79c9a470086f": [
-      "Soothing"
+      "Tamil songs that feel good now"
     ],
     "song_e9cb4a76b0c0": [
       "Love songs filtered by key"
@@ -3185,7 +3185,7 @@
       "Tamilsongs best of all time"
     ],
     "song_2f0f0f6a986e": [
-      "Tamilsongs best of all time"
+      "Tamil songs that feel good now"
     ],
     "song_8f85785fbc1f": [
       "Tamilsongs best of all time"
@@ -6264,18 +6264,39 @@
     ],
     "song_5fc73534ce04": [
       "Trending now tamil"
+    ],
+    "song_2705b6197d4e": [
+      "Tamil songs that feel good now"
+    ],
+    "song_a43f37fb2667": [
+      "Tamil songs that feel good now"
+    ],
+    "song_a5629d52d5a1": [
+      "Tamil songs that feel good now"
+    ],
+    "song_ac0f2c29d967": [
+      "Tamil songs that feel good now"
+    ],
+    "song_94b23ee1c3b5": [
+      "Tamil songs that feel good now"
+    ],
+    "song_f7cbcabca9e6": [
+      "Tamil songs that feel good now"
+    ],
+    "song_c66fcc3767df": [
+      "Tamil songs that feel good now"
     ]
   },
   "stats": {
-    "total_mappings": 2073,
-    "generated_at": "2025-08-05T14:42:37.965866",
+    "total_mappings": 2080,
+    "generated_at": "2025-08-05T15:22:34.508171",
     "last_session_stats": {
-      "new_songs_added": 24,
+      "new_songs_added": 7,
       "new_playlists_added": 1,
-      "duplicates_skipped": 26,
+      "duplicates_skipped": 25,
       "playlists_updated": 0,
-      "existing_songs_found": 2049,
-      "songs_added_to_existing_playlists": 26
+      "existing_songs_found": 2073,
+      "songs_added_to_existing_playlists": 24
     }
   }
 }
